--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts"
   },
   "devDependencies": {
+    "@types/csv-parse": "^1.2.2",
     "@types/express": "^4.17.17",
+    "@types/multer": "^1.4.7",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
@@ -23,7 +26,10 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "csv-parse": "^5.3.5",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
+    "swagger-ui-express": "^4.6.1",
     "uuid": "^9.0.0"
   }
 }
