--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts"
+    "dev": "ts-node-dev --poll --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts",
+    "typeorm": "ts-node-dev node_modules/typeorm/cli.js"
   },
   "devDependencies": {
     "@types/csv-parse": "^1.2.2",
@@ -29,7 +30,10 @@
     "csv-parse": "^5.3.5",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
+    "pg": "^8.9.0",
+    "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.6.1",
+    "typeorm": "0.2.45",
     "uuid": "^9.0.0"
   }
 }
