--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev --poll --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts",
-    "typeorm": "ts-node-dev node_modules/typeorm/cli.js"
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "devDependencies": {
     "@types/csv-parse": "^1.2.2",
@@ -33,6 +33,7 @@
     "pg": "^8.9.0",
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.6.1",
+    "tsyringe": "^4.7.0",
     "typeorm": "0.2.45",
     "uuid": "^9.0.0"
   }
