--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/csv-parse": "^1.2.2",
     "@types/express": "^4.17.17",
     "@types/multer": "^1.4.7",
@@ -27,6 +28,7 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "csv-parse": "^5.3.5",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
